# RayTrace

./: .gitignore  CMakeLists.txt
src/: RenderImage.cpp  RenderImage.h  RenderThread.cpp  RenderThread.h  camera.cpp  camera.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  rtweekend.h  sphere.h  vec3.h
